[project]
name = "ifap"
version = "0.1.0"
description = "ifap using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ifap = "ifap.main:run"
run_crew = "ifap.main:run"
train = "ifap.main:train"
replay = "ifap.main:replay"
test = "ifap.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
